--- a/kuba-kostrzewski/simpleToDoApp/src/main/resources/application.properties
+++ b/kuba-kostrzewski/simpleToDoApp/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/simple_to_do_app?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
