Dodanie loggera, lomboka i refaktor kodu
* dodanie Slf4j i log4j
* dodanie lomboka i zaimplementowanie w klasach encji
* refaktor kodu

--- a/kuba-kostrzewski/simpleToDoApp/src/main/resources/application.properties
+++ b/kuba-kostrzewski/simpleToDoApp/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/simple_to_do_app?useUnicode=ye
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=none
+
+logging.file=logfile.log
