--- a/kuba-kostrzewski/simpleToDoApp/src/main/resources/application.properties
+++ b/kuba-kostrzewski/simpleToDoApp/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/simple_to_do_app?useUnicode=ye
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
 
 logging.file=logfile.log
