--- a/MacBry-Maciej-Bryja/SimpleTodoApp1/pom.xml
+++ b/MacBry-Maciej-Bryja/SimpleTodoApp1/pom.xml
@@ -24,6 +24,14 @@
 			<version>1.4</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
+
 
 	</dependencies>
 
