--- a/Poul12/SimpleToDoApp/web/WEB-INF/web.xml
+++ b/Poul12/SimpleToDoApp/web/WEB-INF/web.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-    xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
-    version="4.0">
-    
+         xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
+
     <display-name>filters</display-name>
-    
+
     <!-- Main page -->
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
-    
+
     <!-- Filters config -->
     <filter>
         <filter-name>AuthFilter</filter-name>
-        <filter-class>main.java.pl._1024kb.stowarzyszenienaukijavy.simpletodo.controller.filters.AuthenticationFilter</filter-class>
+        <filter-class>pl._1024kb.stowarzyszenienaukijavy.simpletodo.controller.filters.AuthenticationFilter</filter-class>
     </filter>
 
     <filter-mapping>
