--- a/MacBry-Maciej-Bryja/SimpleTodoApp1/pom.xml
+++ b/MacBry-Maciej-Bryja/SimpleTodoApp1/pom.xml
@@ -31,6 +31,13 @@
 			<version>1.2.17</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.4</version>
+			<scope>provided</scope>
+		</dependency>
 
 
 	</dependencies>
