--- a/Poul12/SimpleToDoApp/pom.xml
+++ b/Poul12/SimpleToDoApp/pom.xml
@@ -11,7 +11,7 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.3</version>
                 <executions>
                     <execution>
@@ -31,6 +31,11 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>2.3</version>
                 <configuration>
                     <source>8</source>
                     <target>8</target>
