--- a/Poul12/SimpleToDoApp/pom.xml
+++ b/Poul12/SimpleToDoApp/pom.xml
@@ -35,7 +35,7 @@
             <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>2.3</version>
+            <version>3.7.0</version>
                 <configuration>
                     <source>8</source>
                     <target>8</target>
@@ -113,7 +113,29 @@
         <scope>provided</scope>
     </dependency>
 
-    </dependencies>
 
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jdbc</artifactId>
+        <version>5.1.5.RELEASE</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/javax.activation/activation -->
+    <dependency>
+        <groupId>javax.activation</groupId>
+        <artifactId>activation</artifactId>
+        <version>1.1.1</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
+    <dependency>
+        <groupId>com.sun.mail</groupId>
+        <artifactId>javax.mail</artifactId>
+        <version>1.6.1</version>
+    </dependency>
+
+
+    </dependencies>
 
 </project>
