--- a/Poul12/SimpleToDoApp/src/main/resources/application.properties
+++ b/Poul12/SimpleToDoApp/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/todo_app?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.tomcat.initial-size=15
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=100
 spring.datasource.tomcat.max-idle=30
 spring.datasource.tomcat.min-idle=5
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
 server.port=8081
