--- a/Poul12/SimpleToDoApp/src/main/resources/application.properties
+++ b/Poul12/SimpleToDoApp/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/todo_app?useSSL=false&serverTi
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.javax.persistence.validation.mode=none
 spring.datasource.tomcat.initial-size=15
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=100
