--- a/Poul12/SimpleToDoApp/src/main/resources/application.properties
+++ b/Poul12/SimpleToDoApp/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.javax.persistence.validation.mode=none
+spring.datasource.initialization-mode=always
 spring.datasource.tomcat.initial-size=15
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=100
