--- a/Poul12/SimpleToDoApp/src/main/resources/ValidationMessages.properties
+++ b/Poul12/SimpleToDoApp/src/main/resources/ValidationMessages.properties
@@ -1,6 +1,7 @@
 pl._1024kb.stowarzyszenienaukijavy.simpletodo.model.User.username.Size=Username must be longer than {min}
 pl._1024kb.stowarzyszenienaukijavy.simpletodo.model.User.password.Size=Password must be longer than {min}
 pl._1024kb.stowarzyszenienaukijavy.simpletodo.model.User.repeatedPassword.Size=Repeated password must be longer than {min}
+pl._1024kb.stowarzyszenienaukijavy.simpletodo.model.User.repeatedPassword.Match=Passwords must match
 pl._1024kb.stowarzyszenienaukijavy.simpletodo.model.User.email.Email=Email is not valid
 
 pl._1024kb.stowarzyszenienaukijavy.simpletodo.model.Task.title.Size=Title must be longer than {min}
