--- a/Poul12/SimpleToDoApp/src/main/resources/application.properties
+++ b/Poul12/SimpleToDoApp/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/todo_app?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.javax.persistence.validation.mode=none
 spring.datasource.initialization-mode=always
 spring.datasource.tomcat.initial-size=15
@@ -9,5 +9,4 @@ spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=100
 spring.datasource.tomcat.max-idle=30
 spring.datasource.tomcat.min-idle=5
-server.port=8081
-spring.jpa.show-sql = true
+spring.jpa.show-sql=true
