--- a/Poul12/SimpleToDoApp/src/main/resources/application.properties
+++ b/Poul12/SimpleToDoApp/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.datasource.tomcat.max-active=100
 spring.datasource.tomcat.max-idle=30
 spring.datasource.tomcat.min-idle=5
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
