--- a/Poul12/SimpleToDoApp/.gitignore
+++ b/Poul12/SimpleToDoApp/.gitignore
@@ -17,6 +17,15 @@ HELP.md
 *.iml
 *.ipr
 *.data
+.metadata/
+.recommenders/
+**/target/
+**/.settings/
+**/.project
+**/.classpath
+**/.tern-project
+**/bin/
+
 
 ### NetBeans ###
 /nbproject/private/
