--- a/Poul12/SimpleToDoApp/pom.xml
+++ b/Poul12/SimpleToDoApp/pom.xml
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <version>8.0.16</version>
         </dependency>
 
         <dependency>
