--- a/Poul12/SimpleToDoApp/src/main/resources/application.properties
+++ b/Poul12/SimpleToDoApp/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.datasource.tomcat.max-idle=30
 spring.datasource.tomcat.min-idle=5
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+logging.level.org.springframework=debug
+logging.level.root=debug
+logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
+logging.file=${catalina.base}/logs/simpletodo.log
