Deleted unused classes

--- a/Poul12/SimpleToDoApp/src/main/resources/application.properties
+++ b/Poul12/SimpleToDoApp/src/main/resources/application.properties
@@ -15,4 +15,4 @@ logging.level.org.springframework=debug
 logging.level.root=debug
 logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
-logging.file=${catalina.base}/logs/simpletodo.log
+logging.file=../logs/simpletodoapp.log
